--- a/ .env
+++ b/ .env
@@ -1,2 +1,4 @@
-CLIENT_ID=pMzq3ZCgPOyDFdaw3EYpLQ
-API_KEY=LS6f-xpVxlngO2qWn-j724FR0LJv8PztM4Xd9HDcOmj7k6RTxY_BVjIiPuZJ5tq4OMYK-qx9Ls-mAQ9-u6547gvHqEYopMA1MR31VUcooDHaPjsUDSsRabQ1oLtZXnYx
+DJANGO_SECRET_KEY = =nob^)2(22-)y+8k!g!*a@(6yby$(@c4ww0my$z$c=4bs7aa*8
+
+CLIENT_ID = pMzq3ZCgPOyDFdaw3EYpLQ
+YELP_API_KEY = LS6f-xpVxlngO2qWn-j724FR0LJv8PztM4Xd9HDcOmj7k6RTxY_BVjIiPuZJ5tq4OMYK-qx9Ls-mAQ9-u6547gvHqEYopMA1MR31VUcooDHaPjsUDSsRabQ1oLtZXnYx
